# 2D-Sandbox

./: CMakeLists.txt
cmake/: AddFiles.cmake
include/: CMakeConfig.hpp  CMakeLists.txt  OpenGLItem.hpp  OpenGLRenderer.hpp
source/: CMakeLists.txt  OpenGLRenderer.cpp  main.cpp
source_gui/: CMakeLists.txt  Main.qml
